// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dialog - Snapshots > matched snapshot for DialogContent with default props 1`] = `
<div
  data-testid="dialog-portal"
>
  <div
    class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
    data-testid="dialog-overlay"
  />
  <div
    class="fixed inset-0 z-50 flex items-center justify-center px-4 py-6 sm:py-0"
  >
    <div
      class="relative z-50 grid w-full max-h-[80vh] max-w-[calc(100%-2rem)] overflow-y-auto rounded-lg border bg-background p-6 shadow-lg duration-200 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[state=open]:animate-in data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95 sm:max-w-lg"
      data-testid="dialog-content"
    >
      <div>
        Dialog Content
      </div>
      <button
        class="absolute right-4 top-4 inline-flex h-8 w-8 cursor-pointer items-center justify-center whitespace-nowrap rounded-full bg-secondary text-sm text-secondary-foreground transition-all duration-300 ease-in-out hover:bg-secondary/80 disabled:pointer-events-none disabled:opacity-50 outline-none focus:outline-none"
        data-testid="dialog-close"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4 text-secondary-foreground opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span
          class="sr-only"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for Dialog with default props 1`] = `
<div
  data-testid="dialog-root"
>
  <div>
    Dialog Content
  </div>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for DialogContent with close button 1`] = `
<div
  data-testid="dialog-portal"
>
  <div
    class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
    data-testid="dialog-overlay"
  />
  <div
    class="fixed inset-0 z-50 flex items-center justify-center px-4 py-6 sm:py-0"
  >
    <div
      class="relative z-50 grid w-full max-h-[80vh] max-w-[calc(100%-2rem)] overflow-y-auto rounded-lg border bg-background p-6 shadow-lg duration-200 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[state=open]:animate-in data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95 sm:max-w-lg"
      data-testid="dialog-content"
    >
      <div>
        Dialog Content
      </div>
      <button
        class="absolute right-4 top-4 inline-flex h-8 w-8 cursor-pointer items-center justify-center whitespace-nowrap rounded-full bg-secondary text-sm text-secondary-foreground transition-all duration-300 ease-in-out hover:bg-secondary/80 disabled:pointer-events-none disabled:opacity-50 outline-none focus:outline-none"
        data-testid="dialog-close"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4 text-secondary-foreground opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span
          class="sr-only"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for DialogContent without close button 1`] = `
<div
  data-testid="dialog-portal"
>
  <div
    class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
    data-testid="dialog-overlay"
  />
  <div
    class="fixed inset-0 z-50 flex items-center justify-center px-4 py-6 sm:py-0"
  >
    <div
      class="relative z-50 grid w-full max-h-[80vh] max-w-[calc(100%-2rem)] overflow-y-auto rounded-lg border bg-background p-6 shadow-lg duration-200 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[state=open]:animate-in data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95 sm:max-w-lg"
      data-testid="dialog-content"
    >
      <div>
        Dialog Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for DialogFooter 1`] = `
<div
  class="flex flex-col-reverse gap-2 sm:flex-row sm:justify-end"
  data-slot="dialog-footer"
>
  <button>
    Cancel
  </button>
  <button>
    OK
  </button>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for DialogHeader 1`] = `
<div
  class="flex flex-col gap-2"
  data-slot="dialog-header"
  data-testid="dialog-header"
>
  <h2
    class="self-stretch justify-start text-base-foreground text-2xl font-bold leading-loose undefined"
    data-testid="dialog-title"
  >
    Dialog Title
  </h2>
  <p
    class="text-muted-foreground text-sm"
    data-testid="dialog-description"
  >
    Dialog Description
  </p>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for DialogTrigger with asChild 1`] = `
<div
  data-as-child="true"
  data-testid="dialog-trigger"
>
  <button>
    Open Dialog
  </button>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for DialogTrigger with default props 1`] = `
<div
  data-testid="dialog-trigger"
>
  <button>
    Open Dialog
  </button>
</div>
`;

exports[`Dialog - Snapshots > matches snapshot for complete dialog structure 1`] = `
<div
  data-testid="dialog-root"
>
  <div
    data-testid="dialog-trigger"
  >
    <button>
      Open Dialog
    </button>
  </div>
  <div
    data-testid="dialog-portal"
  >
    <div
      class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
      data-testid="dialog-overlay"
    />
    <div
      class="fixed inset-0 z-50 flex items-center justify-center px-4 py-6 sm:py-0"
    >
      <div
        class="relative z-50 grid w-full max-h-[80vh] max-w-[calc(100%-2rem)] overflow-y-auto rounded-lg border bg-background p-6 shadow-lg duration-200 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[state=open]:animate-in data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95 sm:max-w-lg"
        data-testid="dialog-content"
      >
        <div
          class="flex flex-col gap-2"
          data-slot="dialog-header"
          data-testid="dialog-header"
        >
          <h2
            class="self-stretch justify-start text-base-foreground text-2xl font-bold leading-loose undefined"
            data-testid="dialog-title"
          >
            Dialog Title
          </h2>
          <p
            class="text-muted-foreground text-sm"
            data-testid="dialog-description"
          >
            Dialog Description
          </p>
        </div>
        <div>
          Dialog body content
        </div>
        <div
          class="flex flex-col-reverse gap-2 sm:flex-row sm:justify-end"
          data-slot="dialog-footer"
        >
          <button>
            Cancel
          </button>
          <button>
            OK
          </button>
        </div>
        <button
          class="absolute right-4 top-4 inline-flex h-8 w-8 cursor-pointer items-center justify-center whitespace-nowrap rounded-full bg-secondary text-sm text-secondary-foreground transition-all duration-300 ease-in-out hover:bg-secondary/80 disabled:pointer-events-none disabled:opacity-50 outline-none focus:outline-none"
          data-testid="dialog-close"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 text-secondary-foreground opacity-70"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
          <span
            class="sr-only"
          >
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
